--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: node_js
+language: shell
 node_js:
 - '6.9'
 services:
@@ -7,44 +7,12 @@ branches:
   only:
   - master
   - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
-before_deploy:
+script:
   - npm run build
 env:
-  - DOCKER_IMAGE_NAME=swaggerapi/swagger-ui
-deploy:
-  - provider: npm
-    email: apiteam@swagger.io
-    skip_cleanup: true
-    api_key:
-      secure: "YKk5L1BL4oAixvLjWp+i85fNFXK85HKOlUt6QypkZkt23My5aywuYsv5VCLjjOtuWc72zbmOzP82DTBsuRswCRViXWCiNYhl42QTdvadHu0uIlM/FL6aNlvPpzXIws4bMvz1aYOTzFTnSnNuvCTzF1daW0+2ClOo3r0nLEdDfFg="
-    on:
-      tags: true
-      repo: swagger-api/swagger-ui
-      node: '6.9'
-  - provider: script
-    skip_cleanup: true
-    script: swagger-ui-dist-package/deploy.sh
-    on:
-      tags: true
-      repo: swagger-api/swagger-ui
-      node: '6.9'
+  - DOCKER_TAG=latest
+  - DOCKER_IMAGE_NAME=$DOCKER_USER/swagger-ui:$DOCKER_TAG
 after_success:
-  - if [ $DOCKER_HUB_USERNAME ]; then
-      docker login --email=$DOCKER_HUB_EMAIL --username=$DOCKER_HUB_USERNAME --password=$DOCKER_HUB_PASSWORD;
-
-      if [ ! -z "$TRAVIS_TAG" ]; then
-        DOCKER_IMAGE_TAG=$TRAVIS_TAG;
-      else
-        DOCKER_IMAGE_TAG=unstable;
-      fi;
-      docker build -t $DOCKER_IMAGE_NAME .;
-      if [ ! -z "$TRAVIS_TAG" ]; then
-        docker tag $DOCKER_IMAGE_NAME $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG;
-        docker push $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG;
-        docker tag $DOCKER_IMAGE_NAME $DOCKER_IMAGE_NAME:latest;
-        docker push $DOCKER_IMAGE_NAME:latest;
-      else
-        docker tag $DOCKER_IMAGE_NAME $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG;
-        docker push $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG;
-      fi;
-    fi;
+  - docker login -u $DOCKER_USER -p $DOCKER_PASS
+  - docker push $DOCKER_IMAGE_NAME
+  - docker logout
