--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ branches:
 script:
   - npm run build
 env:
-  - DOCKER_TAG=latest
-  - DOCKER_IMAGE_NAME=$DOCKER_USER/swagger-ui:$DOCKER_TAG
+  global:
+    - DOCKER_TAG=latest
+    - DOCKER_IMAGE_NAME=$DOCKER_USER/swagger-ui:$DOCKER_TAG
 after_success:
   - docker login -u $DOCKER_USER -p $DOCKER_PASS
   - docker push $DOCKER_IMAGE_NAME
