--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ branches:
 env:
   global:
     - DOCKER_TAG=latest
-    - DOCKER_IMAGE_NAME=$DOCKER_USER/swagger-ui:$DOCKER_TAG
+    - DOCKER_IMAGE_NAME=hettling/swagger-ui:$DOCKER_TAG
 script:
   - npm run build
   - docker build -t $DOCKER_IMAGE_NAME ./
