--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,12 @@ branches:
 env:
   global:
     - DOCKER_TAG=latest
-    - DOCKER_IMAGE_NAME=hettling/swagger-ui:$DOCKER_TAG
+    - DOCKER_IMAGE_NAME=$DOCKER_USER/swagger-ui:$DOCKER_TAG
 script:
   - npm run build
   - docker build -t $DOCKER_IMAGE_NAME ./
 after_success:
-  - docker login -u hettling -p $DOCKER_PASS
+  - docker login -u $DOCKER_USER -p $DOCKER_PASS
   - docker push $DOCKER_IMAGE_NAME
   - docker logout
 
